2007-12-02  Sanel <karijes@users.sourceforge.net>

	* Removed clear parameter from dir_list
	* Added show_dots parameter in dir_list
	* dir_list() will clear list before items are added

2007-12-01  Sanel <karijes@users.sourceforge.net>

	* Let daylight variable checks do linking not compiling only since
	variable is externaly declared
	* Rewrote dir_list so it does not use scandir() any more due portability
	* Also fixed bug where previous dir_list() didn't show '.' and '..'
	directories
	* Replaced dir_separator() with DIR_SEPARATOR and DIR_SEPARATOR_STR

2007-11-30  Sanel <karijes@users.sourceforge.net>

	* Work on Window class; now it is by default double buffered, inheriting
	Fl_Double_Window, but can be switched to Fl_Window too
	* Fixed bug in DirWatchInotify where continuous events would not be
	reported (two directories are watched, file is moved from one to second
	watched directory)
	* Added create_window_xid() which do the same job as Fl_X::make_xid() but
	with function parameter where can be done work before window is mapped
	* icon() is now known as window_icon() so to not collide with default
	icon() member from Fl_Window
	* Let ALLFLAGS contains FLTKFLAGS (in Jamconfig.in) so jam can pick up
	correctly X11 paths
	* Added FontChooser dialog

2007-11-29  Sanel <karijes@users.sourceforge.net>

	* Added checks for daylight variable; FreeBSD does not have it (presumably
	other BSD's). Is this glibc extension ?
	* Cleared some old code from Window.cpp
	* Let SoundSystem be correctly compiled when sounds are disabled

2007-11-28  Sanel <karijes@users.sourceforge.net>

	* Implemented icon() in Window which will correctly set an titlebar icon
	with transparency. Also added libxpm.m4 for libXpm checks since icon()
	use it.

2007-11-26  Sanel <karijes@users.sourceforge.net>

	* Let jam distclean remove .jamcache and .jamhcache files
	* Versioning is done in single place in configure.in
	* Fixed issue in inotify DirWatch when file is moved in/out watched