@@ -313,125 +313,109 @@ actions GenDocumentation
 	./$(>[1]) $(>[2]) > $(<) ;
 }
 
-# InstallStaticLibrary <destination> : <lib-file> ;
-# Installs static library to destination
+# MakeInstallPrivate <location-dir> : <targets> : <opt-file-mode> : <opt-chown> : <opt-chgrp> ;
+rule MakeInstallPrivate
+{
+	local i t s ;
+	local dir = $(1) ;
+
+	MkDir $(dir) ;
+
+	# This was pain-in-the-ass to set up (bad docs)
+	# but this is the shortest possible explaination of it:
+	# files must be gristed (or foo/foo will not be build) and _after_
+	# that apply SEARCH on it, consulting SUBDIR. Otherwise
+	# known targets will be compiled, but unknown (icons etc.) will not
+	# be recognized as installable entity.
+	s = [ FGristFiles $(2) ] ;
+	SEARCH on $(s) = $(SUBDIR) ;
+
+	for i in $(s) {
+		t = $(i:BSR=$(dir):G=installed) ;
+		LocalDepends $(t) : $(i) ;
+		LocalDepends $(t) : $(dir) ;
+
+		LocalDepends install : $(t) ;
+		LocalClean uninstall : $(t) ;
+
+		Install1 $(t) : $(i) ;
+
+		if $(3) {
+			MODE on $(t) = $(3) ;
+			Chmod $(t) ;
+		}
+
+		if $(4) {
+			OWNER on $(t) = $(4) ;
+			Chown $(t) ;
+		}
+
+		if $(5) {
+			GROUP on $(t) = $(5) ;
+			Chgrp $(t) ;
+		}
+	}
+}
+
+# InstallStaticLibrary <location-dir> : <library> ;
 rule InstallStaticLibrary
 {
-	local t dir lfix ;
-	dir = $(<) ;
-
-	# construct valid installed library name with end path with it's grist
-	t = $(>:BSR=$(dir)) ;
-	t = $(t:G=installstaticlibrary) ;
-	t = $(t:S=$(SUFLIB)) ;
-
-	lfix = $(>:S=$(SUFLIB)) ;
-
-	Depends install : lib $(dir) $(t) ;
-	
-	MkDir $(dir) ;
-	INSTALL on $(t) = $(CP) ;
-	Install1 $(t) : $(lfix) ;
-
-	Clean uninstall : $(t) ;
+	MakeInstallPrivate $(<) : $(>:S=$(SUFLIB)) : $(FILEMODE) ;
 }
 
-# InstallSharedLibrary <destination> : <lib-file> ;
-# Installs shared library to destination, installing
-# symbolic link too
+# InstallSharedLibrary <location-dir> : <library> ;
 rule InstallSharedLibrary
 {
-	local t sl dir lfix slfix ;
-	dir = $(<) ;
+	local symlink = $(>:S=$(SOEXT)) ;
+	MakeInstallPrivate $(<) : $(>:S=$(SOEXTFULL)) : $(EXEMODE) ;
 
-	# construct valid installed library name with end path with it's grist
-	t = $(>:BSR=$(dir)) ;
-	t = $(t:G=installsharedlibrary) ;
-	t = $(t:S=$(SOEXTFULL)) ;
+	# create symbolic link
+	# full path for source (to what will point to) is not needed
+	# since symlink is placed in the same directory (e.g. will be libedelib.so -> libedelib.so.version)
+	SymLink $(symlink:D=$(<)) : $(>:S=$(SOEXTFULL)) ;
 
-	# now the same for symlink
-	sl = $(>:BSR=$(dir)) ;
-	sl = $(sl:G=installsymlink) ;
-	sl = $(sl:S=$(SOEXT)) ;
-
-	# full local library names
-	lfix = $(>:S=$(SOEXTFULL)) ;
-	slfix = $(>:S=$(SOEXT)) ;
-
-	Depends install : lib $(dir) $(t) $(sl) ;
-	
-	MkDir $(dir) ;
-	INSTALL on $(t) = $(CP) ;
-	Install1 $(t) : $(lfix) ;
-
-	# make system wide symlink, since CP mess things up
-	SymLink $(sl) : $(t) : "" ;
-
-	Clean uninstall : $(t) ;
-	Clean uninstall : $(sl) ;
+	LocalDepends install : $(symlink:D=$(<)) ;
+	LocalClean uninstall : $(symlink:D=$(<)) ;
 }
 
-# InstallDocumentation <directory> : <source> ;
-# Copy source file to target directory
-rule InstallDocumentation
-{
-	local t ;
-	t = [ FFileName $(<) $(>:D=) ] ;
-	t = $(t:G=installdoc) ;
-
-	MkDir $(<) ;
-
-	Depends $(<) : $(>) ;
-	Depends $(t) : $(<) ;
-	Depends install : $(t) ;
-	INSTALL on $(t) = $(CP) ;
-	Install1 $(t) : $(>) ;
-
-	Clean uninstall : $(t) ;
-}
-
-# InstallProgram <directory> : <source> ;
-# Copy program to target directory
+# InstallProgram <location-dir> : <program> ;
 rule InstallProgram
 {
-	local t ;
-	t = [ FFileName $(<) $(>:D=) ] ;
-	t = $(t:G=installprogram) ;
-
-	MkDir $(<) ;
-
-	Depends $(<) : $(>) ;
-	Depends $(t) : $(<) ;
-	Depends install : $(t) ;
-	INSTALL on $(t) = $(CP) ;
-	Install1 $(t) : $(>) ;
-
-	Clean uninstall : $(t) ;
+	MakeInstallPrivate $(<) : $(>) : $(EXEMODE) ;
 }
 
-# InstallDirectory <where> : <source-directory> ;
-# Copy directory to given path
+# InstallDocumentation <location-dir> : <file> ;
+rule InstallDocumentation
+{
+	MakeInstallPrivate $(<) : $(>) : $(FILEMODE) ;
+}
+
+# InstallDirectory <location-dir> : <directory> ;
 rule InstallDirectory
 {
-	local t;
+	local dir = $(1) ;
 
-	t = [ FDirName $(<) $(>) ] ;
+	MkDir $(dir) ;
 
-	SEARCH on $(>) = $(SUBDIR) ;
+	s = [ FGristFiles $(2) ] ;
+	SEARCH on $(s) = $(SUBDIR) ;
 
-	MkDir $(<) ;
-	Depends $(<) : $(>) ;
-	Depends $(t) : $(<) ;
-	Depends install : $(t) ;
-	INSTALL on $(t) = $(COPYDIR) ;
-	Install1 $(t) : $(>) ;
+	for i in $(s) {
+		t = $(i:BSR=$(dir):G=installed) ;
+		LocalDepends $(t) : $(i) ;
+		LocalDepends $(t) : $(dir) ;
 
-	Cleandir uninstall : $(t) ;
+		LocalDepends install : $(t) ;
+		Cleandir uninstall : $(t) ;
+
+		CP on $(t) = $(COPYDIR) ;
+		Install1 $(t) : $(i) ;
+	}
 }
 
 actions Install1
 {
-	$(INSTALL) "$(>)" "$(<:D)"
+	$(CP) "$(>)" "$(<)"
 }
 
 rule Help
@@ -443,7 +427,6 @@ rule Help
 
 actions quietly Help1
 {
-	echo "Detected OS: $(OSNAME)"
 	echo ""
 	echo "Build options:"
 	echo "   jam          build all"
